// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error tests test case: 123a 1`] = `"[tokenizer][unknown-character]: 不明なを検出しました(a)"`;

exports[`エラー系のテスト test case: 123a 1`] = `"[tokenizer][unknown-character]: 不明なを検出しました(a)"`;

exports[`リグレッションテスト tokenize    123    1`] = `
Array [
  Object {
    "position": 3,
    "type": "number",
    "value": "123",
  },
]
`;

exports[`リグレッションテスト tokenize    123 1`] = `
Array [
  Object {
    "position": 3,
    "type": "number",
    "value": "123",
  },
]
`;

exports[`リグレッションテスト tokenize    123 123 1`] = `
Array [
  Object {
    "position": 3,
    "type": "number",
    "value": "123",
  },
  Object {
    "position": 7,
    "type": "number",
    "value": "123",
  },
]
`;

exports[`リグレッションテスト tokenize (12+32)*(45-23) 1`] = `
Array [
  Object {
    "position": 0,
    "type": "leftParen",
    "value": "(",
  },
  Object {
    "position": 1,
    "type": "number",
    "value": "12",
  },
  Object {
    "position": 3,
    "type": "operator",
    "value": "+",
  },
  Object {
    "position": 4,
    "type": "number",
    "value": "32",
  },
  Object {
    "position": 6,
    "type": "rightParen",
    "value": ")",
  },
  Object {
    "position": 7,
    "type": "operator",
    "value": "*",
  },
  Object {
    "position": 8,
    "type": "leftParen",
    "value": "(",
  },
  Object {
    "position": 9,
    "type": "number",
    "value": "45",
  },
  Object {
    "position": 11,
    "type": "operator",
    "value": "-",
  },
  Object {
    "position": 12,
    "type": "number",
    "value": "23",
  },
  Object {
    "position": 14,
    "type": "rightParen",
    "value": ")",
  },
]
`;

exports[`リグレッションテスト tokenize -123   -456 1`] = `
Array [
  Object {
    "position": 0,
    "type": "operator",
    "value": "-",
  },
  Object {
    "position": 1,
    "type": "number",
    "value": "123",
  },
  Object {
    "position": 7,
    "type": "operator",
    "value": "-",
  },
  Object {
    "position": 8,
    "type": "number",
    "value": "456",
  },
]
`;

exports[`リグレッションテスト tokenize -123*(-456+23) 1`] = `
Array [
  Object {
    "position": 0,
    "type": "operator",
    "value": "-",
  },
  Object {
    "position": 1,
    "type": "number",
    "value": "123",
  },
  Object {
    "position": 4,
    "type": "operator",
    "value": "*",
  },
  Object {
    "position": 5,
    "type": "leftParen",
    "value": "(",
  },
  Object {
    "position": 6,
    "type": "operator",
    "value": "-",
  },
  Object {
    "position": 7,
    "type": "number",
    "value": "456",
  },
  Object {
    "position": 10,
    "type": "operator",
    "value": "+",
  },
  Object {
    "position": 11,
    "type": "number",
    "value": "23",
  },
  Object {
    "position": 13,
    "type": "rightParen",
    "value": ")",
  },
]
`;

exports[`リグレッションテスト tokenize -123--456 1`] = `
Array [
  Object {
    "position": 0,
    "type": "operator",
    "value": "-",
  },
  Object {
    "position": 1,
    "type": "number",
    "value": "123",
  },
  Object {
    "position": 4,
    "type": "operator",
    "value": "-",
  },
  Object {
    "position": 5,
    "type": "operator",
    "value": "-",
  },
  Object {
    "position": 6,
    "type": "number",
    "value": "456",
  },
]
`;

exports[`リグレッションテスト tokenize 123   * 456 1`] = `
Array [
  Object {
    "position": 0,
    "type": "number",
    "value": "123",
  },
  Object {
    "position": 6,
    "type": "operator",
    "value": "*",
  },
  Object {
    "position": 8,
    "type": "number",
    "value": "456",
  },
]
`;

exports[`リグレッションテスト tokenize 123   + 456 1`] = `
Array [
  Object {
    "position": 0,
    "type": "number",
    "value": "123",
  },
  Object {
    "position": 6,
    "type": "operator",
    "value": "+",
  },
  Object {
    "position": 8,
    "type": "number",
    "value": "456",
  },
]
`;

exports[`リグレッションテスト tokenize 123   + 456*123 1`] = `
Array [
  Object {
    "position": 0,
    "type": "number",
    "value": "123",
  },
  Object {
    "position": 6,
    "type": "operator",
    "value": "+",
  },
  Object {
    "position": 8,
    "type": "number",
    "value": "456",
  },
  Object {
    "position": 11,
    "type": "operator",
    "value": "*",
  },
  Object {
    "position": 12,
    "type": "number",
    "value": "123",
  },
]
`;

exports[`リグレッションテスト tokenize 123   / 456 1`] = `
Array [
  Object {
    "position": 0,
    "type": "number",
    "value": "123",
  },
  Object {
    "position": 6,
    "type": "operator",
    "value": "/",
  },
  Object {
    "position": 8,
    "type": "number",
    "value": "456",
  },
]
`;

exports[`リグレッションテスト tokenize 123   - 456 1`] = `
Array [
  Object {
    "position": 0,
    "type": "number",
    "value": "123",
  },
  Object {
    "position": 6,
    "type": "operator",
    "value": "-",
  },
  Object {
    "position": 8,
    "type": "number",
    "value": "456",
  },
]
`;
